--- a/index.html
+++ b/index.html
@@ -1,18 +1,33 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="preload" href="store-hover.svg" as="image" />
+    <link rel="preload" href="store-active.svg" as="image" />
+
+    <link rel="preload" href="inventory-hover.svg" as="image" />
+    <link rel="preload" href="inventory-active.svg" as="image" />
+
+    <link rel="preload" href="setting-hover.svg" as="image" />
+    <link rel="preload" href="setting-active.svg" as="image" />
+
+    <link rel="preload" href="guide-hover.svg" as="image" />
+    <link rel="preload" href="guide-active.svg" as="image" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
   </head>
   <body>
     <div id="root"></div>
     <!-- Work Sans Font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
-   <!-- Work Sans Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Work Sans Font -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
