--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <link rel="preload" href="guide-hover.svg" as="image" />
     <link rel="preload" href="guide-active.svg" as="image" />
 
+    <link rel="preload" href="switchThumbOn.svg.svg" as="image" />
+    <link rel="preload" href="switchThumbOff.svg.svg" as="image" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
   </head>
